Fixed alignment of recent art thumbnails

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -165,14 +165,14 @@ textarea {
 }
 
 .about {
-	max-width: 70vw;
+	width: 70vw;
 	margin: auto;
 	padding: 3em;
 	text-align: center;
 }
 
 .recent {
-	max-width: 70vw;
+	width: 70vw;
 	margin: auto;
 	padding: 3em;
 	text-align: center;
@@ -214,6 +214,21 @@ textarea {
 	text-align: left;
 }
 
+.wideimages {
+	padding: 2em;
+	display: inline-block;
+    width: 40vw;
+    text-align: right;
+}
+
+.narrowimages {
+	padding: 2em;
+	display: inline-block;
+	width: 20vw;
+	text-align: right;
+}
+
+
 .prof {
 	width: 10vw;
 }
@@ -236,6 +251,11 @@ textarea {
 	text-align: center;
 }
 
+.rowright {
+	margin: auto;
+	text-align: center;
+}
+
 .merch {
 	text-align: center;
 	margin: auto;
@@ -251,6 +271,15 @@ textarea {
     padding: 0;
 }
 
+.rowright ul {
+
+	text-align: right;
+	margin: auto;
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .merch ul {
 	margin: auto;
 	list-style-type: none;
@@ -260,6 +289,11 @@ textarea {
 
 
 .row ul li {
+	display: inline-block;
+	padding: 0px;
+}
+
+.rowright ul li {
 	display: inline-block;
 	padding: 0px;
 }
